correction de bug version mobile + ajout du menu déroulant if < 400px device width

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,5 +7,12 @@
 }
 
 nb-layout-column {
-    padding: 1.5rem 1.5rem 1rem !important;
+    padding: 1.75rem 0 0 0 !important;
+    margin: 0 !important;
+}
+
+nb-layout-footer {
+    padding: 0 0 0 0 !important;
+    margin: 1.25rem 0 0 0 !important;
+
 }
