--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -8,7 +8,7 @@ nb-card {
     min-width: 300px;
 
     min-height: 100px;
-    max-height: 700px;
+    max-height: 600px;
 
     background-size: 50%;
     margin-right: auto;
